tests/sksl/errors/golden/InVarWithInitializerExpression.glsl

in float x = 1.0;
in float z = y = 1.0;
